--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <body>
       <header>
         <div class="row">
-          <div class="large-6 columns right">
-            <h1>Absolute Twaddle</h1>
-          </div>
         </div>
       </header>
 
@@ -24,7 +21,10 @@
         <section class="about">
           <div class="row">
             <div class="large-12 columns">
-              <h1>What about me?</h1>
+              <h1>~ Hi! I'm Stuart ~</h1>
+              <p>I'm a Front End Developer from Melbourne's East. I have a passion for minimal &amp; easy to use interfaces.</p>
+
+              <p>When I'm not working away for the folks at ________, you'll find me listening to music, watching my favourite TV shows, gaming or riding my bicycles.</p>
             </div>
           </div>
         </section>
@@ -32,7 +32,7 @@
         <section class="career">
           <div class="row">
             <div class="large-12 columns">
-              <h1>Career</h1>
+              <h1>~ Career ~</h1>
             </div>
           </div>
         </section>
@@ -40,7 +40,18 @@
         <section class="skills">
           <div class="row">
             <div class="large-12 columns">
-              <h1>Expertise</h1>
+              <h1>~ Expertise ~</h1>
+              <ul>
+                <li><i class="fi-html5"></i>HTML</li>
+                <li><i class="fi-css3"></i>CSS</li>
+                <li><i class="fi-web"></i>SASS/LESS</li>
+                <li><i class="fi-web"></i>JavaScript</li>
+                <li><i class="fi-web"></i>Node.js</li>
+                <li><i class="fi-wrench"></i>Front End optimisation</li>
+                <li><i class="fi-layout"></i>UI/UX Design</li>
+                <li><i class="fi-torso-business"></i>Client Facing</li>
+                <li><i class="fi-social-adobe"></i>Adobe Creative Suite</li>
+              </ul>
             </div>
           </div>
         </section>
@@ -48,7 +59,10 @@
         <section class="contact">
           <div class="row">
             <div class="large-12 columns">
-              <h1>Contact</h1>
+              <h1>~ Contact ~</h1>
+              <p>If you'd like to contact for me for work opportunities, please use one of the options below to connect.</p>
+              <p><i class="fi-at-sign"></i><a href="mailto:snmahon@gmail.com">snmahon@gmail.com</a></p>
+              <p><i class="fi-mobile"></i><a href="tel:0413 664 521">0413 664 521</a></p>
             </div>
           </div>
         </section>
@@ -56,7 +70,8 @@
         <section class="references">
           <div class="row">
             <div class="large-12 columns">
-              <h1>References</h1>
+              <h1>~ References ~</h1>
+              <p>Available upon request.</p>
             </div>
           </div>
         </section>
